// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> rendering should render correctly with social links 1`] = `
<React.Fragment>
  <div
    className="owisp-login-container"
  >
    <div
      className="owisp-login-container-inner"
    >
      <form
        className="owisp-login-form"
        onSubmit={[Function]}
      >
        <React.Fragment>
          <React.Fragment>
            <div
              className="owisp-login-social-links-div"
            >
              <a
                className="owisp-login-social-link"
                href="test url"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div>
                  <div
                    className="owisp-login-social-link-text"
                  >
                    Facebook
                  </div>
                </div>
              </a>
              <a
                className="owisp-login-social-link"
                href="https://control.co.ke/accounts/facebook/login/?next=%2Ffreeradius%2Fsocial-login%2Fstaging%2F%3Fcp%3Dhttp%3A%2F%2Fcontrol.brandfi.co.ke%2Floginpage%2F%26last%3D"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div>
                  <img
                    alt="https://control.co.ke/accounts/facebook/login/?next=%2Ffreeradius%2Fsocial-login%2Fstaging%2F%3Fcp%3Dhttp%3A%2F%2Fcontrol.brandfi.co.ke%2Floginpage%2F%26last%3D"
                    className="owisp-login-social-link-icon"
                    src="/assets/default/test.png"
                  />
                </div>
              </a>
            </div>
          </React.Fragment>
        </React.Fragment>
        <div
          className="owisp-login-fieldset"
        >
          <React.Fragment>
            <label
              className="owisp-login-label owisp-login-label-email"
              htmlFor="owisp-login-email"
            >
              <div
                className="owisp-login-label-text"
              >
                email
              </div>
              <input
                className="owisp-login-input
                        owisp-login-input-email
                        "
                id="owisp-login-email"
                name="email"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="email address"
                required={true}
                title={null}
                type="email"
                value=""
              />
            </label>
          </React.Fragment>
          <React.Fragment>
            <label
              className="owisp-login-label owisp-login-label-password"
              htmlFor="owisp-login-password"
            >
              <div
                className="owisp-login-label-text"
              >
                password
              </div>
              <input
                className="owisp-login-input owisp-login-input-password
                      "
                id="owisp-login-password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="password"
                required={true}
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
            </label>
          </React.Fragment>
        </div>
        <div
          className="owisp-login-add-info"
        >
          By logging in, you accept the 
          <ForwardRef
            className="owisp-login-additional-link"
            to="/default/login/terms-and-conditions"
          >
            terms and conditions
          </ForwardRef>
           and the 
          <ForwardRef
            className="owisp-login-additional-link"
            to="/default/login/privacy-policy"
          >
            privacy policy
          </ForwardRef>
           of this WiFi service. 
        </div>
        <React.Fragment>
          <input
            className="owisp-login-form-btn owisp-login-login-btn"
            id="owisp-login-login-btn"
            type="submit"
            value="Login"
          />
        </React.Fragment>
        <React.Fragment>
          <label
            className="owisp-login-label owisp-login-label-register-btn"
            htmlFor="owisp-login-register-btn"
          >
            <div
              className="owisp-login-label-text"
            >
              Not registered yet?
            </div>
          </label>
          <div
            className="owisp-login-form-register-btn-div"
          >
            <ForwardRef
              className="owisp-login-form-btn owisp-login-register-btn"
              to="/default/registration"
            >
              Sign up
            </ForwardRef>
          </div>
        </React.Fragment>
        <div
          className="owisp-login-links-div"
        >
          <ForwardRef
            className="owisp-login-link"
            to="/default/password/reset"
          >
            Forgot your password?
          </ForwardRef>
        </div>
      </form>
      <div
        className="owisp-login-contact-container"
      >
        <Memo(Connect(Contact)) />
      </div>
    </div>
  </div>
  <Route
    path="default/login/:name"
    render={[Function]}
  />
</React.Fragment>
`;

exports[`<Login /> rendering should render correctly without social links 1`] = `
<React.Fragment>
  <div
    className="owisp-login-container"
  >
    <div
      className="owisp-login-container-inner"
    >
      <form
        className="owisp-login-form"
        onSubmit={[Function]}
      >
        <React.Fragment>
          <React.Fragment>
            <div
              className="owisp-login-social-links-div"
            >
              <a
                className="owisp-login-social-link"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div>
                  <img
                    alt="Login with Facebook"
                    className="owisp-login-social-link-icon"
                    src="/assets/default/facebook.svg"
                  />
                  <div
                    className="owisp-login-social-link-text"
                  >
                    Login with Facebook
                  </div>
                </div>
              </a>
              <a
                className="owisp-login-social-link"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div>
                  <img
                    alt="Login with google"
                    className="owisp-login-social-link-icon"
                    src="/assets/default/google.svg"
                  />
                  <div
                    className="owisp-login-social-link-text"
                  >
                    Login with google
                  </div>
                </div>
              </a>
              <a
                className="owisp-login-social-link"
                href="#"
                rel="noopener noreferrer"
                target="_blank"
              >
                <div>
                  <img
                    alt="Login with Twitter"
                    className="owisp-login-social-link-icon"
                    src="/assets/default/twitter.svg"
                  />
                  <div
                    className="owisp-login-social-link-text"
                  >
                    Login with Twitter
                  </div>
                </div>
              </a>
            </div>
          </React.Fragment>
        </React.Fragment>
        <div
          className="owisp-login-fieldset"
        >
          <React.Fragment>
            <label
              className="owisp-login-label owisp-login-label-email"
              htmlFor="owisp-login-email"
            >
              <div
                className="owisp-login-label-text"
              >
                email
              </div>
              <input
                className="owisp-login-input
                        owisp-login-input-email
                        "
                id="owisp-login-email"
                name="email"
                onChange={[Function]}
                pattern=".+@.+\\\\..+"
                placeholder="email address"
                required={true}
                title={null}
                type="email"
                value=""
              />
            </label>
          </React.Fragment>
          <React.Fragment>
            <label
              className="owisp-login-label owisp-login-label-password"
              htmlFor="owisp-login-password"
            >
              <div
                className="owisp-login-label-text"
              >
                password
              </div>
              <input
                className="owisp-login-input owisp-login-input-password
                      "
                id="owisp-login-password"
                name="password"
                onChange={[Function]}
                pattern=".{6,}"
                placeholder="password"
                required={true}
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
            </label>
          </React.Fragment>
        </div>
        <div
          className="owisp-login-add-info"
        >
          By logging in, you accept the 
          <ForwardRef
            className="owisp-login-additional-link"
            to="/default/login/terms-and-conditions"
          >
            terms and conditions
          </ForwardRef>
           and the 
          <ForwardRef
            className="owisp-login-additional-link"
            to="/default/login/privacy-policy"
          >
            privacy policy
          </ForwardRef>
           of this WiFi service. 
        </div>
        <React.Fragment>
          <input
            className="owisp-login-form-btn owisp-login-login-btn"
            id="owisp-login-login-btn"
            type="submit"
            value="Login"
          />
        </React.Fragment>
        <React.Fragment>
          <label
            className="owisp-login-label owisp-login-label-register-btn"
            htmlFor="owisp-login-register-btn"
          >
            <div
              className="owisp-login-label-text"
            >
              Not registered yet?
            </div>
          </label>
          <div
            className="owisp-login-form-register-btn-div"
          >
            <ForwardRef
              className="owisp-login-form-btn owisp-login-register-btn"
              to="/default/registration"
            >
              Sign up
            </ForwardRef>
          </div>
        </React.Fragment>
        <div
          className="owisp-login-links-div"
        >
          <ForwardRef
            className="owisp-login-link"
            to="/default/password/reset"
          >
            Forgot your password?
          </ForwardRef>
        </div>
      </form>
      <div
        className="owisp-login-contact-container"
      >
        <Memo(Connect(Contact)) />
      </div>
    </div>
  </div>
  <Route
    path="default/login/:name"
    render={[Function]}
  />
</React.Fragment>
`;
